[gd_scene load_steps=12 format=3 uid="uid://bcwoiip0xcue3"]

[ext_resource type="Script" uid="uid://lccjrw2y4uxw" path="res://scripts/main_house.gd" id="1_26umc"]
[ext_resource type="Texture2D" uid="uid://c1kct4bpetgy7" path="res://asset/tiles/Overworld_Tileset.png" id="1_ee48l"]
[ext_resource type="Texture2D" uid="uid://moa0xbjun0iv" path="res://asset/tiles/Dungeon_Tileset.png" id="2_u4q01"]
[ext_resource type="Texture2D" uid="uid://bvsl76w0r3egu" path="res://asset/tiles/Grass.png" id="3_oqsju"]
[ext_resource type="PackedScene" uid="uid://bwaiforsd78xa" path="res://scenes/player.tscn" id="5_gmmk2"]
[ext_resource type="PackedScene" uid="uid://cuayqgwyahlfo" path="res://scenes/skeleton.tscn" id="6_nlaq8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_26umc"]
texture = ExtResource("1_ee48l")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.0731716, -8, -3.0084724, -6.9550705, -0.06469917, -6.9550705, -0.032348633, -8, 2.0056477, -8, 2.1026955, -7.0197687, 5.0464687, -6.922721, 5.0788174, -5.952246, 6.8903713, -6.0169444, 6.92272, -6.9550705, 8, -6.922721, 8, -4.3671374, -5.0788193, -4.1730423, -5.2082157, 8, -8, 8, -8, -3.8818998, -6.987419, -4.2377405, -6.8903723, -4.9817715, -5.9845953, -5.0464697, -5.9845953, -6.922721, -5.0464687, -7.0197687, -5.01412, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.3671374, -8, -4.3347874, -8, -8)
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 3.9142475, 8, 4.043644, -4.431835, -8, -4.3347874, -8, -8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.0731716, -8, -3.0084724, -6.9550705, -0.06469917, -6.9550705, -0.032348633, -8, 2.0056477, -8, 2.1026955, -7.0197687, 5.0464687, -6.922721, 5.0788174, -5.952246, 6.8903713, -6.0169444, 6.92272, -6.9550705, 8, -6.922721, 8, -4.3671374, -5.0788193, -4.1730423, -5.2082157, 8, -8, 8, -8, -3.8818998, -6.987419, -4.2377405, -6.8903723, -4.9817715, -5.9845953, -5.0464697, -5.9845953, -6.922721, -5.0464687, -7.0197687, -5.01412, -8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.3671374, -8, -4.3347874, -8, -8)
6:0/0 = 0
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 3.9142475, 8, 4.043644, -4.431835, -8, -4.3347874, -8, -8)
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.9142494, -8, -3.8172016, 8, -8, 8, -8, -8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 2.9437733, 8, 2.879074, -8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.9142494, -8, -3.8172016, 8, -8, 8, -8, -8)
5:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 2.9437733, 8, 2.879074, -8)
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.6469841, -0.6146345, 8, -0.9704752, 8, 5.919896, -1.9086018, 6.0492926, -8, 1.1645699, -8, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.8762512, 8, -1.9086008, 8, 5.919896, -8, 5.9845953)
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 1.0028238, 5.919897, 4.0112963, 1.973299, 6.081643, -8, 5.9845953, -8, -4.043646, -0.7440319, -4.6259303, 1.811552, -6.1139917, 1.9409485, -8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.011297, -8, 0.38818932, -4.399486, 8, -4.334788, 8, 5.919896, -1.9086018, 6.0492926, -8, 1.3586645, -8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4.431835, 8, -4.334788, 8, 5.919896, -8, 5.9845953)
6:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 1.0028238, 5.919897, 4.0112963, 1.973299, 6.081643, -8, 5.9845953, -8, -4.043646, -0.7440319, -4.6259303, 1.811552, -6.1139917, 1.9409485, -8)
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.987419, 5.0788193, -7.0521173, -2.9761224, -6.1139917, -2.9761224, -6.0492935, -3.9789462, -5.0464687, -4.043645, -5.0788193, -6.0169435, -3.0731716, -6.0492926, -2.9761238, -7.052117, -1.0351734, -7.0197678, -1.0028248, -8, 1.067522, -8, 1.067522, -7.052117, 3.0731697, -6.9550695, 3.1055183, -6.0169435, 5.0464687, -5.952245, 5.111168, -4.2053905, 6.1463413, -4.140692, 6.081642, -2.9761224, 6.9550686, -3.0731697, 7.0197678, 5.01412, 5.919897, 5.111168, 5.8875465, 5.9522457, 5.0464687, 6.016945, 5.1435165, 7.084467, 3.1055183, 7.1168156, 3.137869, 8, -3.0084724, 8, -3.040821, 6.987419, -5.0464687, 6.987419, -5.01412, 5.9845963, -5.9522457, 5.9845963, -6.016945, 5.01412)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.987419, 5.0788193, -7.0521173, -2.9761224, -6.1139917, -2.9761224, -6.0492935, -3.9789462, -5.0464687, -4.043645, -5.0788193, -6.0169435, -3.0731716, -6.0492926, -2.9761238, -7.052117, -1.0351734, -7.0197678, -1.0028248, -8, 1.067522, -8, 1.067522, -7.052117, 3.0731697, -6.9550695, 3.1055183, -6.0169435, 5.0464687, -5.952245, 5.111168, -4.2053905, 6.1463413, -4.140692, 6.081642, -2.9761224, 6.9550686, -3.0731697, 7.0197678, 5.01412, 5.919897, 5.111168, 5.8875465, 5.9522457, 5.0464687, 6.016945, 5.1435165, 7.084467, 3.1055183, 7.1168156, 3.137869, 8, -3.0084724, 8, -3.040821, 6.987419, -5.0464687, 6.987419, -5.01412, 5.9845963, -5.9522457, 5.9845963, -6.016945, 5.01412)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.8139153, -6.7624054, 5.960087, 2.0631065, 3.839672, 5.7881603, -3.151966, 6.303936, -5.444309, 5.5016174, -6.647787, 1.6619453, -4.8712234, -6.8197145)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.8139153, -6.7624054, 5.960087, 2.0631065, 3.839672, 5.7881603, -3.151966, 6.303936, -5.444309, 5.5016174, -6.647787, 1.6619453, -4.8712234, -6.8197145)
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.0631065, -5.6162357, 4.8712234, -1.891182, 4.8139153, 3.2092762, 2.9227371, 4.756607, -2.6361923, 4.5846806, -4.5846786, 2.9227333, -4.756607, -1.5473309, -2.2350311, -5.44431)
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 5.2159004, 1.079155, 5.2159004, 0.899292, 8, -8, 8)
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 5.3957596, -8, 5.036045)
16:7/0 = 0
16:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 5.3957596, -8, 5.036045)
17:7/0 = 0
17:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -0.53957367, 8, -0.71943665, 5.3957596, -8, 5.5756187)
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.3381653, -8, -1.978447, 8, -8, 8)
17:8/0 = 0
17:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.978447, -8, 8, -8, 8, 8, 1.978447, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.777031, -0.8992958, 3.5971756, -1.079155, 3.5971756, 5.5756187, -3.4173126, 5.2159004)
11:9/0 = 0
11:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.777031, -0.8992958, 3.5971756, -1.079155, 3.5971756, 5.5756187, -3.4173126, 5.2159004)
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.777031, -0.8992958, 3.5971756, -1.079155, 3.5971756, 5.5756187, -3.4173126, 5.2159004)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.6978836, -8, -2.5180206, -2.6978836, 0.71943665, -1.978447, 1.079155, 0.71943283, 8, 1.2590103, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.2590103, 8, 1.2590103, 8, 8, -8, 8)
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.2590103, 8, 1.2590103, 8, 8, -8, 8)
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.53957367, -0.71943665, 0.899292, -0.35971832, -2.8777428, 2.3381653, -2.8777428, 2.5180206, -8, 8, -8, 8, 8, -8, 8)
10:10/0 = 0
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.4749146, -1.4388695, 6.4749146, -1.079155, 5.935341, 5.935337, -5.935341, 6.4749146)
11:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
10:11/0 = 0
11:11/0 = 0
11:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 6.7624054, 8, 6.93433, -8)
11:11/0/physics_layer_0/polygon_1/points = PackedVector2Array(-7.1062546, 8, -7.163563, -8, -8, -8, -8, 8)
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -6.99164, -8, -6.934331, -8, -8, 8, -8)
7:12/0/physics_layer_0/polygon_1/points = PackedVector2Array(-8, 8, 8, 8, 8, 6.7050953, -8, 6.8197136)
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
0:9/size_in_atlas = Vector2i(2, 2)
0:9/0 = 0
0:9/0/y_sort_origin = 11
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14.518154, 9.746452, -9.035774, 9.8479805, -9.238827, 14.721207, -14.213577, 14.6196785)
0:11/size_in_atlas = Vector2i(2, 2)
0:11/0 = 0
0:11/0/y_sort_origin = 23
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(9.137299, 10.254082, 14.822731, 10.254082, 14.721199, 14.518154, 9.238823, 14.721207)
12:11/size_in_atlas = Vector2i(1, 2)
12:11/0 = 0
12:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.93433, -16.103695, 7.04895, 14.785597, 3.0373535, 14.900213, 3.0946617, 11.805553, -3.9542885, 11.920172, -4.068905, 15.072138, -7.908575, 15.072138, -8.0805, -16.218311)
12:10/size_in_atlas = Vector2i(2, 1)
12:10/0 = 0
12:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.332928, 6.7624035, 12.149406, 6.7624035, 11.920174, 4.98584, -11.97748, 5.100458, -11.805553, 7.1062546, -15.989075, 7.0489464, -16.103693, -5.960087, 12.03479, -6.017395, 12.03479, -7.908576, 15.9890785, -8.023193)
9:5/size_in_atlas = Vector2i(5, 4)
9:5/0 = 0
9:5/0/y_sort_origin = 25
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.115562, 26.97881, 31.295418, 13.669262, -32.73429, 14.02898, -32.914146, 27.698246)
12:0/size_in_atlas = Vector2i(6, 5)
12:0/0 = 0
12:0/0/y_sort_origin = 33
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(22.622787, 34.09349, 23.26004, 29.951286, 38.55432, 29.951286, 39.19159, 16.887428, -40.78473, 17.206055, -40.46611, 34.412117)
7:9/size_in_atlas = Vector2i(3, 2)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.2590103, 8, 1.2590103, 8, 8, -8, 8)
3:9/size_in_atlas = Vector2i(2, 3)
3:9/0 = 0
3:9/0/y_sort_origin = 15
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.100456, 9.857063, 3.495819, 9.857063, 3.3812027, 16.103691, -5.043148, 16.218311)
5:9/size_in_atlas = Vector2i(2, 3)
5:9/0 = 0
5:9/0/y_sort_origin = 15
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.100456, 9.857063, 3.495819, 9.857063, 3.3812027, 16.103691, -5.043148, 16.218311)
2:9/size_in_atlas = Vector2i(1, 2)
2:9/0 = 0
2:9/0/y_sort_origin = 27
13:11/size_in_atlas = Vector2i(2, 2)
13:11/0 = 0
13:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(11.748245, 14.613672, 11.977482, 7.1635647, -10.945927, 7.4501057, -10.774, 14.842905)
9:11/size_in_atlas = Vector2i(1, 2)
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.5589256, 10.831308, 5.5016174, 3.0946598, -4.9285316, 3.0946598, -4.98584, 11.003235)
6:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gmmk2"]
texture = ExtResource("2_u4q01")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
6:0/size_in_atlas = Vector2i(3, 2)
6:0/0 = 0
6:2/size_in_atlas = Vector2i(3, 2)
6:2/0 = 0
7:6/size_in_atlas = Vector2i(1, 2)
7:6/0 = 0
10:10/size_in_atlas = Vector2i(2, 3)
10:10/0 = 0
11:6/size_in_atlas = Vector2i(1, 4)
11:6/0 = 0
6:6/size_in_atlas = Vector2i(1, 2)
6:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nlaq8"]
texture = ExtResource("3_oqsju")
0:0/size_in_atlas = Vector2i(30, 15)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_5e3qg"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_26umc")
sources/1 = SubResource("TileSetAtlasSource_gmmk2")
sources/2 = SubResource("TileSetAtlasSource_nlaq8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5e3qg"]
size = Vector2(16, 8)

[node name="main_house" type="Node2D"]
script = ExtResource("1_26umc")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(9, 1)
tile_set = SubResource("TileSet_5e3qg")
format = 2
layer_0/tile_data = PackedInt32Array(0, 458753, 9, 1, 458753, 9, 2, 458753, 9, 3, 458753, 9, 4, 458753, 9, 5, 458753, 9, 6, 458753, 9, 7, 458753, 9, 8, 458753, 9, 9, 458753, 9, 10, 458753, 9, 11, 458753, 9, 12, 458753, 9, 13, 458753, 9, 14, 458753, 9, 65550, 458753, 9, 131086, 458753, 9, 196622, 458753, 9, 262158, 458753, 9, 327694, 65536, 3, 393230, 65536, 3, 458766, 65536, 3, 524302, 65536, 3, 589838, 65536, 3, 589837, 65536, 3, 589836, 65536, 3, 589835, 65536, 3, 589834, 65536, 3, 589833, 65536, 3, 589832, 65536, 3, 589831, 65536, 3, 524295, 65536, 3, 524294, 65536, 3, 524293, 65536, 3, 524292, 65536, 3, 524291, 65536, 3, 524290, 65536, 3, 524289, 65536, 3, 589825, 65536, 3, 589824, 458753, 9, 589826, 65536, 3, 655362, 65536, 3, 655363, 65536, 3, 589827, 65536, 3, 589828, 65536, 3, 589829, 65536, 3, 589830, 65536, 3, 655360, 458753, 9, 655361, 65536, 3, 655364, 65536, 3, 655365, 65536, 3, 655366, 65536, 3, 655367, 65536, 3, 655368, 65536, 3, 655369, 65536, 3, 655370, 65536, 3, 655371, 65536, 3, 655372, 65536, 3, 655373, 65536, 3, 655374, 65536, 3, 655375, 65536, 3, 655376, 65536, 3, 655377, 65536, 3, 655378, 65536, 3, 655379, 65536, 3, 655380, 65536, 3, 589844, 65536, 3, 524308, 65536, 3, 524307, 65536, 3, 458771, 65536, 3, 393235, 65536, 3, 327699, 65536, 3, 262163, 458753, 9, 131091, 458753, 9, 65555, 458753, 9, 19, 458753, 9, 20, 458753, 9, 65556, 458753, 9, 131092, 458753, 9, 196628, 458753, 9, 262164, 458753, 9, 327700, 65536, 3, 393236, 65536, 3, 458772, 65536, 3, 589843, 65536, 3, 589842, 65536, 3, 589841, 65536, 3, 589840, 65536, 3, 589839, 65536, 3, 524304, 65536, 3, 458768, 65536, 3, 458769, 65536, 3, 393233, 65536, 3, 393234, 65536, 3, 458770, 65536, 3, 524306, 65536, 3, 524305, 65536, 3, 524303, 65536, 3, 393232, 65536, 3, 327698, 65536, 3, 327697, 65536, 3, 327696, 65536, 3, 327695, 65536, 3, 393231, 65536, 3, 458767, 65536, 3, 262160, 458753, 9, 196625, 458753, 9, 196626, 458753, 9, 262162, 458753, 9, 262161, 458753, 9, 262159, 458753, 9, 196624, 458753, 9, 196623, 458753, 9, 131090, 458753, 9, 131089, 458753, 9, 131088, 458753, 9, 131087, 458753, 9, 65554, 458753, 9, 65553, 458753, 9, 65552, 458753, 9, 65551, 458753, 9, 17, 458753, 9, 18, 458753, 9, 16, 458753, 9, 15, 458753, 9, 65536, 458753, 9, 131072, 458753, 9, 196608, 458753, 9, 262144, 458753, 9, 327680, 458753, 9, 393216, 458753, 9, 458752, 458753, 9, 524288, 458753, 9, 458753, 65536, 3, 393217, 65536, 3, 327681, 65536, 3, 262145, 458753, 9, 196609, 458753, 9, 131073, 458753, 9, 458754, 65536, 3, 393218, 65536, 3, 327682, 65536, 3, 262146, 458753, 9, 196610, 458753, 9, 131074, 458753, 9, 65537, 458753, 9, 65538, 458753, 9, 65539, 458753, 9, 65540, 458753, 9, 65541, 458753, 9, 65542, 458753, 9, 65545, 458753, 9, 65546, 458753, 9, 65547, 458753, 9, 65548, 458753, 9, 65549, 458753, 9, 131085, 458753, 9, 196621, 458753, 9, 262157, 458753, 9, 327693, 65536, 3, 393229, 65536, 3, 458765, 65536, 3, 524299, 65536, 3, 524298, 65536, 3, 524297, 65536, 3, 524296, 65536, 3, 458757, 65536, 3, 458756, 65536, 3, 458755, 65536, 3, 458758, 65536, 3, 393223, 65536, 3, 393224, 65536, 3, 393225, 65536, 3, 393226, 65536, 3, 393227, 65536, 3, 393228, 65536, 3, 393222, 65536, 3, 458763, 65536, 3, 458764, 65536, 3, 458762, 65536, 3, 458761, 65536, 3, 458760, 65536, 3, 458759, 65536, 3, 393221, 65536, 3, 393220, 65536, 3, 393219, 65536, 3, 327692, 65536, 3, 327691, 65536, 3, 327690, 65536, 3, 327689, 65536, 3, 327688, 65536, 3, 327687, 65536, 3, 327686, 65536, 3, 327685, 65536, 3, 327684, 65536, 3, 262153, 458753, 9, 262155, 458753, 9, 262156, 458753, 9, 196620, 458753, 9, 196619, 458753, 9, 196617, 458753, 9, 196613, 458753, 9, 196612, 458753, 9, 196611, 458753, 9, 262149, 458753, 9, 262148, 458753, 9, 262147, 458753, 9, 131083, 458753, 9, 131084, 458753, 9, 131081, 458753, 9, 131077, 458753, 9, 131076, 458753, 9, 131075, 458753, 9, 21, 458753, 9, 65557, 458753, 9, 131093, 458753, 9, 196629, 458753, 9, 262165, 458753, 9, 327701, 65536, 3, 393237, 65536, 3, 458773, 65536, 3, 524309, 65536, 3, 589845, 65536, 3, 655381, 65536, 3, 655382, 458753, 9, 589846, 458753, 9, 524310, 458753, 9, 22, 458753, 9, 65558, 458753, 9, 131094, 458753, 9, 196630, 458753, 9, 262166, 458753, 9, 327702, 458753, 9, 393238, 458753, 9, 458774, 458753, 9, 720918, 458753, 9, 720917, 65536, 3, 720916, 65536, 3, 720915, 65536, 3, 720914, 65536, 3, 720913, 65536, 3, 720912, 65536, 3, 720911, 65536, 3, 720910, 65536, 3, 720909, 65536, 3, 720908, 65536, 3, 720907, 65536, 3, 720906, 65536, 3, 720905, 65536, 3, 720904, 65536, 3, 720903, 65536, 3, 720902, 65536, 3, 720901, 65536, 3, 720900, 65536, 3, 720899, 65536, 3, 720898, 65536, 3, 720897, 65536, 3, 720896, 458753, 9, 131078, 458753, 9, 131079, 458753, 9, 131080, 458753, 9, 196616, 458753, 9, 262152, 458753, 9, 262151, 458753, 9, 262150, 458753, 9, 196614, 458753, 9, 196615, 458753, 9, 524300, 65536, 3, 524301, 65536, 3, 131082, 458753, 9, 196618, 458753, 9, 262154, 458753, 9, 65544, 458753, 9, 65543, 458753, 9, 327683, 65536, 3, 786432, 458753, 9, 786433, 458753, 9, 786434, 458753, 9, 786435, 458753, 9, 786436, 458753, 9, 786437, 458753, 9, 786438, 458753, 9, 786439, 458753, 9, 786440, 458753, 9, 786441, 458753, 9, 786442, 458753, 9, 786443, 458753, 9, 786444, 458753, 9, 786445, 458753, 9, 786446, 458753, 9, 786447, 458753, 9, 786448, 458753, 9, 786449, 458753, 9, 786450, 458753, 9, 786451, 458753, 9, 786452, 458753, 9, 786453, 458753, 9, 786454, 458753, 9, 196627, 983040, 6, 65535, 458753, 9, 131071, 458753, 9, 196607, 458753, 9, 262143, 458753, 9, 327679, 458753, 9, 393215, 458753, 9, 458751, 458753, 9, 524287, 458753, 9, 589823, 458753, 9, 655359, 458753, 9, 720895, 458753, 9, 786431, 458753, 9, 851967, 458753, 9, 917503, 458753, 9, 851968, 458753, 9, 851969, 458753, 9, 851970, 458753, 9, 851971, 458753, 9, 851972, 458753, 9, 851973, 458753, 9, 851974, 458753, 9, 851975, 458753, 9, 851976, 458753, 9, 851977, 458753, 9, 851978, 458753, 9, 851979, 458753, 9, 851980, 458753, 9, 851981, 458753, 9, 851982, 458753, 9, 851983, 458753, 9, 851984, 458753, 9, 851985, 458753, 9, 851986, 458753, 9, 851987, 458753, 9, 851988, 458753, 9, 851989, 458753, 9, 851990, 458753, 9)
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array(196627, 655360, 12, 196620, 983040, 6)
layer_2/name = "Layer2"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(720897, 917504, 9, 720917, 1114112, 9, 720898, 983040, 9, 720899, 983040, 9, 720900, 983040, 9, 720901, 983040, 9, 720902, 983040, 9, 720903, 983040, 9, 720904, 983040, 9, 720906, 983040, 9, 720907, 983040, 9, 720908, 983040, 9, 720909, 983040, 9, 720910, 983040, 9, 720911, 983040, 9, 720912, 983040, 9, 720913, 917504, 9, 720914, 983040, 9, 720915, 983040, 9, 720916, 983040, 9, 655381, 1114112, 8, 589845, 1114112, 8, 524309, 1114112, 8, 458773, 1114112, 8, 393237, 1114112, 8, 327701, 1114112, 8, 655361, 917504, 8, 589825, 917504, 8, 524289, 917504, 8, 458753, 917504, 8, 393217, 917504, 8, 327681, 917504, 8, 262145, 917504, 7, 196609, 917504, 6, 131073, 917504, 5, 131074, 983040, 5, 131075, 983040, 5, 131076, 983040, 5, 131077, 983040, 5, 131078, 983040, 5, 131079, 983040, 5, 131080, 983040, 5, 131081, 983040, 5, 131082, 983040, 5, 131083, 983040, 5, 131084, 983040, 5, 131085, 983040, 5, 131086, 983040, 5, 131087, 983040, 5, 131088, 983040, 5, 131089, 917504, 5, 131090, 983040, 5, 131091, 983040, 5, 131092, 983040, 5, 131093, 1114112, 5, 196629, 1114112, 6, 262165, 1114112, 7, 262164, 1048576, 7, 262163, 1048576, 7, 262162, 1048576, 7, 262161, 917504, 7, 262160, 1048576, 7, 262159, 1048576, 7, 262158, 1048576, 7, 262153, 1048576, 7, 262152, 1048576, 7, 262155, 1048576, 7, 262154, 1048576, 7, 262157, 1048576, 7, 262151, 1048576, 7, 262150, 1048576, 7, 262149, 1048576, 7, 262148, 1048576, 7, 262147, 1048576, 7, 262146, 1048576, 7, 196628, 1048576, 6, 196626, 1048576, 6, 196625, 917504, 6, 196624, 1048576, 6, 196623, 1048576, 6, 196622, 1048576, 6, 196621, 983040, 6, 196619, 1048576, 6, 196618, 1048576, 6, 196617, 1048576, 6, 196616, 1048576, 6, 196615, 1048576, 6, 196614, 1048576, 6, 196613, 1048576, 6, 196612, 1048576, 6, 196611, 1048576, 6, 196610, 1048576, 6, 655377, 917504, 8, 589841, 917504, 8, 524305, 917504, 8, 393233, 917504, 8, 327697, 917504, 8, 327700, 786432, 11, 327698, 786432, 11, 524306, 983040, 10, 524307, 1048576, 10, 524308, 1114112, 10, 589843, 1048576, 11, 589842, 983040, 11, 589844, 1114112, 11, 655380, 1114112, 12, 655378, 983040, 12, 655379, 1048576, 12, 458754, 720896, 9, 458756, 786432, 9, 458755, 655360, 10, 393219, 655360, 9, 393222, 983040, 10, 393223, 1048576, 10, 393224, 1048576, 10, 393225, 1048576, 10, 393226, 1048576, 10, 393227, 1048576, 10, 393228, 1114112, 10, 458764, 1114112, 11, 524300, 1114112, 11, 589836, 1114112, 11, 655372, 1114112, 12, 655371, 1048576, 12, 655370, 1048576, 12, 655368, 1048576, 12, 655369, 1048576, 12, 655367, 1048576, 12, 655366, 983040, 12, 589830, 983040, 11, 524294, 983040, 11, 458758, 983040, 11, 458759, 1048576, 11, 524295, 1048576, 11, 589831, 1048576, 11, 589832, 1048576, 11, 524296, 1048576, 11, 458760, 1048576, 11, 458761, 1048576, 11, 458762, 1048576, 11, 524298, 1048576, 11, 524297, 1048576, 11, 589833, 1048576, 11, 589834, 1048576, 11, 589835, 1048576, 11, 524299, 1048576, 11, 458763, 1048576, 11, 196620, 655360, 11, 262156, 983040, 7, 655374, 851968, 11, 589839, 655360, 9, 196627, 917504, 10, 327696, 655361, 7, 655362, 655361, 7)

[node name="collasions" type="CollisionShape2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collasions"]
polygon = PackedVector2Array(32, 79, 355, 77, 355, 184, 169, 185, 169, 193, 153, 193, 153, 185, 31, 185, 29, -21, -37, -19, -36, 259, 423, 254, 425, -52, 20, -49, 32, 29)

[node name="mainhouse_exidpoint" type="Area2D" parent="."]
y_sort_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainhouse_exidpoint"]
position = Vector2(161, 189)
shape = SubResource("RectangleShape2D_5e3qg")

[node name="player" parent="." instance=ExtResource("5_gmmk2")]
position = Vector2(161, 177)

[node name="skeleton" parent="." instance=ExtResource("6_nlaq8")]
position = Vector2(89, 105)

[node name="skeleton2" parent="." instance=ExtResource("6_nlaq8")]
position = Vector2(327, 124)

[connection signal="body_entered" from="mainhouse_exidpoint" to="." method="_on_mainhouse_exidpoint_body_entered"]
[connection signal="body_exited" from="mainhouse_exidpoint" to="." method="_on_mainhouse_exidpoint_body_exited"]
